# kode

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  build-fast.sh  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
CLA/: index.html
Formula/: Kode.rb
HOMEBREW/: index.html
THEME_CONFIG/: index.html
advanced/: index.html
authentication/: index.html
auto-drive-phase-migration-TODO/: index.html
auto-drive-state-inventory/: index.html
auto-qa/: index.html
code-rs/: Cargo.toml
code-rs/code-mars/: Cargo.toml  README.md
code-rs/code-mars/src/: agent.rs  aggregator.rs  config.rs  coordinator.rs  error.rs  lib.rs  mcts.rs  moa.rs  model_router.rs  strategy.rs  types.rs  verifier.rs  workspace.rs
code-rs/code-mars/tests/: mcts_integration.rs  multi_provider_integration.rs
config/: index.html
contributing/: index.html
docs/: contributing.md  index.md  references.md
exec/: index.html
experimental/: index.html
faq/: index.html
fork-enhancements/: index.html
getting-started/: index.html
history_render_cache_bridge/: index.html
history_state_schema/: index.html
install/: index.html
integration-zed/: index.html
interrupt-resume-postmortem/: index.html
license/: index.html
markdown_showcase/: index.html
open-source-fund/: index.html
platform-sandboxing/: index.html
prompts/: index.html
references/: index.html
release_management/: index.html
sandbox/: index.html
search/: search_index.json
slash-commands/: index.html
tui-card-themes/: index.html
tui-chatwidget-refactor/: index.html
(+68 files in other folders)
