[package]
name = "code-mars"
version.workspace = true
edition.workspace = true

[dependencies]
code-core = { workspace = true }
code-protocol = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
